# HomeWiseAI_3

./: .editorconfig  .env.development  .env.production  .gitignore  .prettierrc  CHANGELOG.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts  vitest.config.ts
.husky/: pre-commit  pre-push
coverage/: coverage-final.json  index.html
coverage/src/: index.html  main.tsx.html
docs/: 01-Goals-and-Overview.md  02-Architecture-and-Tech-Stack.md  03-Implementation-Plan.md  04-Roadmap-and-Milestones.md  05-Testing-and-Validation.md  06-Deployment-and-Distribution.md  07-Development-Procedure.md  08-User-Stories-and-Use-Cases.md  09-Security-and-Privacy-Guidelines.md  10-Enhancing Local File Indexing (Optional Feature).md  11-Sales-and-Distribution.md  12-Technical-Specifications.md  13-Technical-Stack-Specification.md  AI-Development-Guidelines.md  AI-Task-Execution-Rules.md  API-Specifications.md  Architecture.md  Code-Examples.md  Contribution.md  Core-MVP-TaskList.md  Data-Model.md  Database-Schema.md  Deployment.md  Developer-Setup.md  Development-Procedures.md  Document-Ingestion-Design.md  Frontend-Architecture.md  GPU-Support.md  Goals.md  Hardware-Verification.md  Installation.md  Model-Management.md  README.md  Roadmap.md  Security-Encryption.md  Testing-QA.md  Troubleshooting.md  User-Feature-Spec.md
docs/development/: ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  SECURITY.md
docs/security/: PRIVACY.md
docs/support/: COMMON_ISSUES.md  FAQ.md
docs/test-reports/: nvidia-gpu-support.md  nvidia-gpu-testing-guide.md
src/: App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hardware.rs  hardware_service.rs  lib.rs  main.rs
src-tauri/src/gpu/: TEST_RESULTS.md  apple.rs  mod.rs  nvidia.rs  tests.rs
src/__tests__/: main.test.tsx
src/components/: App.tsx  GpuInfo.module.css  GpuInfo.tsx  TestDiagnostics.tsx
src/hooks/: useHardwareInfo.ts
src/services/: hardwareService.ts  tauriApi.ts
src/test/: setup.ts
src/types/: gpu.ts  hardware.ts
src/utils/: formatters.ts
tests/gpu/: TEST_RESULTS.md
(+28 files in other folders)
