[package]
name = "homewiseai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "window-all", "app-all", "dialog-all", "fs-all", "shell-open", "dialog", "os-all", "process-all"] }
sysinfo = "0.29.10"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
